--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: "Open Sans", sans-serif;
-  src: url(https://github.com/ValeSh22/repo-diploma2/tree/master/font/OpenSans-Regular.woff);
+  src: url("font/OpenSans-Regular.woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans", sans-serif;
-  src: url(https://github.com/ValeSh22/repo-diploma2/tree/master/font/OpenSans-Bold.woff);
+  src: url("font/OpenSans-Bold.woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -39,7 +39,7 @@
   padding: 10% 7% 0;
 }
 
-.header:before {
+.header::before {
   content: "";
   width: 100%;
   height: 100%;
@@ -48,6 +48,9 @@
   position: absolute;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 }
 
 .header-container {
@@ -57,7 +60,7 @@
 
 .header-logo {
   width: 135px;
-  margin-bottom: 135px;
+  margin-top: 32px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -71,6 +74,7 @@
   text-transform: uppercase;
   font-weight: 700;
   width: 220px;
+  margin-top: 204px;
 }
 
 .sport {
@@ -121,21 +125,27 @@
 }
 
 .main-container {
-  width: 320px;
-  padding: 26px 21px 0;
+  max-width: 320px;
+  width: 100%;
+  min-height: 100vh;
+  padding: 26px 0 21px;
   box-sizing: border-box;
   
   display: flex;
+  flex-direction: column;
 } 
 
 .main {
   box-sizing: border-box;
+  max-width: 320px;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  padding-top: 2,8%;
 }
 
-.athlets-title {
+.athlets,
+.players {
   font-size: 50px;
   line-height: 60px;
   color: #e7e7e7;
@@ -144,8 +154,214 @@
   text-transform: uppercase;
 }
 
-.athlets-img {
-  box-sizing: border-box;
-  margin-right: 30px;
+.athlets-title,
+.players-title {
+  padding-left: 24px;
+  padding-top: 54px;
+  font-size: 50px;
+  line-height: 60px;
+  color: #e7e7e7;
+  font-family: "Open Sans";
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
+.athlets-img,
+ players-img {
+  box-sizing: border-box;
+  margin-left: 6%;
+  position: absolute;
+  z-index: 2;
+}
+
+.first-avdatages-section {
+  margin-top: 70%;
+  display: flex;
+  width: 100%;
+  height: 33.33%;
+  max-width: 320px;
+  background-color: #fafafa;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 20px;
+  position: relative;
+  z-index: 1;
+}
+
+.avdatages-title-section {
+  display: flex;
+  flex-direction: row;
+  box-sizing: border-box;
+  margin-top: 28px;
+  
+}
+
+.number {
+font-size: 14px;
+letter-spacing: 1px;
+line-height: 34px;
+color: #000000;
+font-family: "Open Sans";
+font-weight: 700;
+text-transform: uppercase;
+}
+
+.first-title-avdatages,
+.second-title-avdatages,
+.third-title-avdatages{
+  font-size: 23px;
+  letter-spacing: 1px;
+  line-height: 34px;
+  color: #c1c1c1;
+  font-family: "Open Sans";
+  font-weight: 700;
+  text-transform: uppercase;
+  
+  margin-left: 9px;
+ } 
+
+.number::after {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 4px;
+  background-color: #5e42b0;
+  border-radius: 1px;
+  margin-top: -10px;
+  box-sizing: border-box;
+}
+
+.first-avdatages,
+.second-avdatages {
+  width: 100%;
+  margin-top: 26px;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-size: 15px;
+  letter-spacing: 1px;
+  line-height: 18px;
+  color: #000000;
+  font-family: "Open Sans";
+  font-weight: 400;
+}
+ 
+.third-avdatages {
+  width: 100%;
+  margin-top: 26px;
+  box-sizing: border-box;
+ 
+ font-size: 15px;
+ letter-spacing: 1px;
+ line-height: 18px;
+ color: #ffffff;
+ font-family: "Open Sans";
+ font-weight: 400;
+}
+
+.athlets:nth-child(n + 2) {
+  margin-top: 24px;
+}
+
+.second-avdatages-section {
+  background-color: #f5f4f9;
+  padding: 0 20px;
+  height: 33.33%;
+}
+
+.third-avdatages-section {
+  background-color: #5e42b0;
+  padding: 0 20px;
+  height: 33.33%;
+}
+
+.third-number {
+font-size: 14px;
+letter-spacing: 1px;
+line-height: 34px;
+color: #000000;
+font-family: "Open Sans";
+font-weight: 700;
+text-transform: uppercase;
+}
+
+.third-number::after {
+  content: "";
+  display: block;
+  width: 15px;
+  height: 4px;
+  background-color: #ffffff;
+  border-radius: 1px;
+  margin-top: -10px;
+  box-sizing: border-box;
+}
+
+.players-third-avdatages-section {
+  background-color: #090c35;
+  padding: 0 20px;
+  height: 33.33%;
+}
+
+.be-active-img {
+ min-height: 100vh;
+  display: flex;
+  position: relative;
+  background-image: url("img/football_767.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #1b1d3f;
+  padding: 10% 7% 0;
+}
+
+.footer {
+  min-height: 100vh;
+  display: flex;
+  position: relative;
+  background-image: url("img/game_767.jpg");
+  background-position: 50% 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: #1b1d3f;
+  padding: 10% 7% 0;
+}
+
+.footer::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #1b1d3f;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+}
+
+.footer-container {
+  z-index: 2;
+  width: 100%;
+}
+
+.footer-logo {
+  width: 135px;
+  margin-bottom: 135px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  fill: #ffffff;
+}
+
+.footer-slogan {
+  font-family: "Open Sans";
+  font-size: 28px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 220px;
+}
+
+.footer-buttom {
+  margin: 90px 0 85px;
+}
