--- a/css/main.css
+++ b/css/main.css
@@ -4,14 +4,14 @@
 
 @font-face {
   font-family: "Open Sans", sans-serif;
-  src: url("font/OpenSans-Regular.woff");
+  src: url("https://github.com/ValeSh22/repo-diploma2/tree/master/font/OpenSans-Regular.woff");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Open Sans", sans-serif;
-  src: url("font/OpenSans-Bold.woff");
+  src: url("https://github.com/ValeSh22/repo-diploma2/tree/master/font/OpenSans-Bold.woff");
   font-weight: 700;
   font-style: normal;
 }
@@ -31,7 +31,7 @@
   min-height: 100vh;
   display: flex;
   position: relative;
-  background-image: url("https://github.com/ValeSh22/repo-diploma2/blob/master/img/football_767.jpg");
+  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/img/football_767.jpg");
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -103,14 +103,14 @@
 }
 
 .app-store{
-  background-image: url("svg/apple_logo_black.svg");
+  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/svg/apple_logo_black.svg");
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: 28% center;
 }
 
 .google-play{
-  background-image: url("svg/google-play.svg");
+  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/svg/google-play.svg");
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: 28% center;
