--- a/css/main.css
+++ b/css/main.css
@@ -305,7 +305,7 @@ text-transform: uppercase;
  min-height: 100vh;
   display: flex;
   position: relative;
-  background-image: url("img/football_767.jpg");
+  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/img/football_767.jpg");
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -317,7 +317,7 @@ text-transform: uppercase;
   min-height: 100vh;
   display: flex;
   position: relative;
-  background-image: url("img/game_767.jpg");
+  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/img/game_767.jpg");
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
