--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,7 @@
   min-height: 100vh;
   display: flex;
   position: relative;
-  background-image: url("https://github.com/ValeSh22/repo-diploma2/tree/master/img/football_767.jpg");
+  background-image: url("https://valesh22.github.io/repo-diploma2/img/football_767.jpg");
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
