--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@
   width: 100%;
   height: 100%;
   background-color: #1b1d3f;
-  opacity: 0.5;
+  opacity: 0.8;
   position: absolute;
   top: 0;
   left: 0;
@@ -93,7 +93,7 @@
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   background-color: #5e42b0;
   border: none;
   border-radius: 25px;
@@ -106,6 +106,11 @@
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: 28% center;
+  
+}
+
+.app-store:hover{
+  fill: #111;
 }
 
 .google-play{
@@ -115,10 +120,17 @@
   background-position: 28% center;
 }
 
+.google-play:hover{
+  fill: #111;
+}
+
+
 .app-stor-link, .google-play-link {
   font-weight: 400; 
   text-align: center;
 }
+
+
 .buttom-description {
   display: block;
 }
@@ -329,17 +341,16 @@ text-transform: uppercase;
   width: 100%;
   height: 100%;
   background-color: #1b1d3f;
-  opacity: 0.3;
+  opacity: 0.8;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
 }
 
 .footer-container {
-  z-index: 2;
+  z-index: 1;
   width: 100%;
 }
 
