--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@
   text-transform: uppercase;
   font-weight: 700;
   width: 220px;
-  margin-top: 204px;
+  margin-top: 184px;
 }
 
 .sport {
@@ -93,7 +93,7 @@
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   background-color: #5e42b0;
   border: none;
   border-radius: 25px;
