--- a/css/main.css
+++ b/css/main.css
@@ -101,13 +101,20 @@
   font-family: "Open Sans";
 }
 
-.app-store{
+.button .app-store {
+  fill: #ffffff;
+}
+
+.button .google-play {
+  fill: #ffffff;
+}
+
+.app-store {
   background-image: url("https://valesh22.github.io/repo-diploma2/svg/apple_logo_black.svg");
   background-size: 25px;
   background-repeat: no-repeat;
   background-position: 28% center;
   fill: #ffffff;
-  
 }
 
 .google-play {
