--- a/css/main.css
+++ b/css/main.css
@@ -101,14 +101,6 @@
   font-family: "Open Sans";
 }
 
-.button .app-store {
-  fill: #ffffff;
-}
-
-.button .google-play {
-  fill: #ffffff;
-}
-
 .app-store {
   background-image: url("https://valesh22.github.io/repo-diploma2/svg/apple_logo_black.svg");
   background-size: 25px;
@@ -133,7 +125,6 @@
 
 .buttom-description {
   display: block;
-  text-align: left;
 }
 
 .main-container {
@@ -197,6 +188,30 @@
   padding: 0 20px;
   position: relative;
   z-index: 1;
+}
+
+.second-avdatages-section {
+  margin-top: 70%;
+  display: flex;
+  width: 100%;
+  height: 33.33%;
+  max-width: 320px;
+  background-color: #f5f4f9;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+
+.third-avdatages-section {
+  margin-top: 70%;
+  display: flex;
+  width: 100%;
+  height: 33.33%;
+  max-width: 320px;
+  background-color: #5e42b0;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 20px;
 }
 
 .avdatages-title-section {
