--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,25 @@
   height: 33.33%;
 }
 
-.be-active-img {
+.capabilities  {
+  margin-top: 70%;
+  display: flex;
+  width: 100%;
+  height: 33.33%;
+  max-width: 320px;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 0 20px;
+}
+
+.capability-title-section::before {
+  contetn: "";
+  width: 70px;
+  height: 70px;
+  background-color: #5e42b0;
+}
+
+.capability-img {
   min-height: 100vh;
   display: flex;
   position: relative;
@@ -337,6 +355,32 @@
   background-color: #1b1d3f;
   padding: 10% 7% 0;
 }
+
+.first-title-capability, .second-title-capability,
+.third-title-capability {
+  padding-left: 24px;
+  padding-top: 54px;
+  text-transform: uppercase;
+  font-size: 28px;
+  letter-spacing: 1px;
+  line-height: 34px;
+  color: #e7e7e7;
+  font-family: "Open Sans";
+  font-weight: 700;
+}
+
+.first-capability, .second-capability,
+.third-capability {
+  width: 280px;
+  height: 108px;
+  font-size: 16px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  color: #000000;
+  font-family: "Open Sans";
+  font-weight: 400;
+}
+
 
 .footer {
   min-height: 100vh;
